2020-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4 released.

	* tramp.el: Bump version.

2020-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-file-attributes-with-stat): Simplify shell
	command.  Suppress errors (interpret as nil).
	(tramp-sh-handle-make-process): Do not visit with
	`insert-file-contents'.  Delete tmp file only if exists.
	(tramp-send-command-and-read): Suppress `signal-hook-function'
	when reading expression.

2020-05-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.5 released.

	* tramp-smb.el (tramp-smb-errors): Add "NT_STATUS_INVALID_PARAMETER".

2020-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-file-name-handler):
	Increase `max-specpdl-size' temporarily.

	* tramp-rclone.el (tramp-rclone-flush-directory-cache):
	Fix a problem with older Emacsen.

2020-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-signal-strings): New defun.

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file): Use it.

2020-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-enabled): Prevent crash for older Emacsen.

2020-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file): Handle signals.

2020-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-send-command-and-check): Add optional
	argument EXIT-STATUS.
	(tramp-adb-handle-process-file): Use it.

	* tramp-sh.el (tramp-send-command-and-check): Add optional
	argument EXIT-STATUS.
	(tramp-sh-handle-process-file): Use it.  (Bug#41099)

2020-04-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.4 released.

2020-04-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-conf): Fix docstring.
	(tramp-smb-options): New defcustom.
	(tramp-smb-handle-copy-directory, tramp-smb-handle-file-acl)